New View layers don't render in Cycles (passes get turned off) #75969

Closed
opened 2020-04-21 16:37:00 +02:00 by Zsolt Stefan · 12 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4
Worked: (optional)

Short description of error
Creating a new view layer with the option "Copy Settings" with 2.83 builds doesn't render in Cycles (neither viewport, nor F12)

Now I was going to report this as a normal bug, but then found what was wrong. It is that when making a new view layer using copy settings, all the Pass options get turned off.

These are the following, which are on by default in the View Layer properties:
View Layer

  • Use for Rendering
    Passes
  • Data: Combined and Z, and Alpha Threshold = 0.5
  • Filter: all six Options

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4` Worked: (optional) **Short description of error** Creating a new view layer with the option "Copy Settings" with 2.83 builds doesn't render in Cycles (neither viewport, nor F12) Now I was going to report this as a normal bug, but then found what was wrong. It is that when making a new view layer using copy settings, all the Pass options get turned off. These are the following, which are on by default in the View Layer properties: **View Layer** - Use for Rendering **Passes** - Data: Combined and Z, and Alpha Threshold = 0.5 - Filter: all six Options **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @ZsoltStefan

Added subscriber: @ZsoltStefan

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Nice! I was about to post the very same thing in a few moments ;)

Nice! I was about to post the very same thing in a few moments ;)

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Please try with 2.82 and a daily build to see if the problem was fixed already.

Please try with 2.82 and a [daily build ](https://builder.blender.org/) to see if the problem was fixed already.

This functionality was added during the 2.83 alpha phase AFAIK. So no chance to test it in 2.82a.
The bug itself isn't fixed in the latest builds. I'm using the 2.90 alpha right now and it shows the problem.

This functionality was added during the 2.83 alpha phase AFAIK. So no chance to test it in 2.82a. The bug itself isn't fixed in the latest builds. I'm using the 2.90 alpha right now and it shows the problem.

@SteffenD the bug report says "Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4", thus my surprise, can you mention here the hash you tested so that a developer can confirm

@SteffenD the bug report says "Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4", thus my surprise, can you mention here the hash you tested so that a developer can confirm

Ah sorry, you're right. I can confirm the bug with the current master:
version: 2.90 (sub 0), branch: master, commit date: 2020-04-21 16:29, hash: 8845b27dce

Ah sorry, you're right. I can confirm the bug with the current master: version: 2.90 (sub 0), branch: master, commit date: 2020-04-21 16:29, hash: `8845b27dce`

This issue was referenced by 13e3a1c532

This issue was referenced by 13e3a1c53222a65f652d454f665d9e44178cf9a5
Brecht Van Lommel self-assigned this 2020-04-21 19:56:41 +02:00

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'

@brecht Thanks for taking care of this so quickly.

P.S.: I think you forgot to merge branches ;)

@brecht Thanks for taking care of this so quickly. P.S.: I think you forgot to merge branches ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75969
No description provided.