Fix T75969: view layer add with Copy Settings does not copy all data